[package]
name = "quinn-noise"
version = "0.2.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "quinn noise implementation."
repository = "https://github.com/ipfs-rust/quinn-noise"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1.0.1"
chacha20poly1305 = { version = "0.8.0", features = ["reduced-round"] }
curve25519-dalek = "3.1.0"
ed25519-dalek = "1.0.1"
quinn-proto = { version = "0.7.3", default-features = false, features = ["ring"] }
rand_core = "0.5.1"
ring = "0.16.20"
sha2 = "0.9.4"
subtle = "2.4.0"
tracing = "0.1.26"
x25519-dalek = "1.1.1"
xoodoo = "0.1.0"
zeroize = "1.3.0"
